Added display of the difference for the period.

--- a/ExchangeRates/Views/MainWindow.axaml
+++ b/ExchangeRates/Views/MainWindow.axaml
@@ -83,6 +83,7 @@
                                     Series="{Binding Series}"
                                     XAxes="{Binding XAxis}"
                                     YAxes="{Binding YAxis}"
+                                    ZoomMode="Both"
                                     IsVisible="{Binding HasErrorMessage, Converter={StaticResource InverseBooleanConverter}}"
                                     />
             </Grid>
