Added data export to json

--- a/ExchangeRates/Views/MainWindow.axaml
+++ b/ExchangeRates/Views/MainWindow.axaml
@@ -22,7 +22,7 @@
 
     <DockPanel>
         
-        <StackPanel Orientation="Horizontal" Margin="10 10 0 0" DockPanel.Dock="Top">
+        <DockPanel Margin="10 10 0 0" DockPanel.Dock="Top">
             
             <ComboBox 
                 SelectedIndex="{Binding SelectedCurrency}"
@@ -56,7 +56,13 @@
             <Button Content="Получить данные" 
                     Command="{Binding SearchDataCommand}" />
             
-        </StackPanel>
+            <Button Content="Экпорт данных (JSON)" 
+                    Margin="0 0 10 0"
+                    HorizontalAlignment="Right" 
+                    Command="{Binding SaveJsonDataCommand}"
+                    />
+            
+        </DockPanel>
         
         <Grid DockPanel.Dock="Top">
             
